# fine-tuning-example

./: main.ipynb  main.py  pyproject.toml
lora_weights/: README.md  adapter_config.json  adapter_model.safetensors
